tests/ui/feature-gates/feature-gate-export_stable.stderr
error[E0658]: the `#[export_stable]` attribute is an experimental feature
  --> $DIR/feature-gate-export_stable.rs:3:1
   |
LL | #[export_stable]
   | ^^^^^^^^^^^^^^^^
   |
   = note: see issue #139939 <https://github.com/rust-lang/rust/issues/139939> for more information
   = help: add `#![feature(export_stable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
