tests/ui/feature-gates/feature-gate-export_stable.rs
#![crate_type="lib"]

#[export_stable]
//~^ ERROR the `#[export_stable]` attribute is an experimental feature
pub mod a {}
